backend_main_django/apps/django-app/django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-site
  labels:
    app: django-app
spec:
  containers:
  - name: django-app
    image: my-django-unit:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 80
    env:
    - name: DATABASE_URL
      value: "postgres://test_k8s:OwOtBep9Frut@192.168.0.164:5432/test_k8s"
    - name: SECRET_KEY
      value: "your-secret-key-here"
    - name: DEBUG
      value: "True"
    - name: ALLOWED_HOSTS
      value: "*"
