backend_main_django/apps/django-app/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-evgenij-sozykin
spec:
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
