backend_main_django/apps/django-app/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-12-11T16:08:24Z"
  generation: 1
  name: main-nginx
  namespace: edu-evgenij-sozykin
  resourceVersion: "174707233"
  uid: 54e02e33-54c3-44d8-8350-d7ea14afae0e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: main-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: main-nginx
    spec:
      automountServiceAccountToken: true
      containers:
      - image: nginx:1.16.1
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          mountPropagation: None
          name: nginx-config
          readOnly: true
          subPath: nginx.conf
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: nginx.conf
            path: nginx.conf
          name: main-nginx-config
          optional: false
        name: nginx-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-12-11T16:08:26Z"
    lastUpdateTime: "2025-12-11T16:08:26Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-12-11T16:08:24Z"
    lastUpdateTime: "2025-12-11T16:08:26Z"
    message: ReplicaSet "main-nginx-6f44488c4c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
